--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Myweb-page</h1>
+      <h1 class="project-name">Sumedha Gupta's Blog </h1>
       <h2 class="project-tagline"></h2>
       <a href="https://github.com/sumedha22/myweb-page" class="btn">View on GitHub</a>
       <a href="https://github.com/sumedha22/myweb-page/zipball/master" class="btn">Download .zip</a>
