--- a/index.html
+++ b/index.html
@@ -12,27 +12,34 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Sumedha Gupta</h1>
-      <h2 class="project-tagline"></h2>
-      <a href="https://github.com/sumedha22/myweb-page" class="btn">View on GitHub</a>
+      <h2 class="project-tagline">Computer Science Grad Student Seeking Summer Internship Oppurtunities</h2>
+      <!--<a href="https://github.com/sumedha22/myweb-page" class="btn">View on GitHub</a>
       <a href="https://github.com/sumedha22/myweb-page/zipball/master" class="btn">Download .zip</a>
-      <a href="https://github.com/sumedha22/myweb-page/tarball/master" class="btn">Download .tar.gz</a>
+      <a href="https://github.com/sumedha22/myweb-page/tarball/master" class="btn">Download .tar.gz</a>-->
     </section>
 
     <section class="main-content">
       <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a id="Summary" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Summary</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<p>Computer Science Graduate student at Illinois Institute of Technology, Chicago with more than two years of professional experience in software development at Tata Consultancy Services through which I developed a deep passion for development and programming and constantly working for new and innovative ideas with good problem solving skills and a strong grasp on Object-Oriented Design Principles, data structures and algorithms.</p>
 
 <h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
+<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Education</h3>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<p>Masters of Science in Computer Science at Illinois Institute of Technology, Chicago, IL with GPA 3.66/4 graduating May,2018
+Bachelor of Technology in Computer Science at Kurukshetra University, India GPA:4/4(on conversion) graduated May 2012
+</p>
+
+<h3>
+<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Technical Skills</h3>
+
+<p>• Programming Languages: Java, Python, C, JavaScript Shell Scripts, MPI, OpenMP, PThreads, HTML & CSS.
+• Technologies/Framework : Android, Spring MVC, Tomcat, Hadoop, Servlets, REST APIs, JSP, AJAX, JSON.
+• Databases (SQL/NoSQL): PostgreSQL, Oracle, Firebase, MongoDB, MySQL.
+• Tools and Libraries: Eclipse, Android Studio, Putty, WinSCP, Jupyter.
+• Version Control & Others: Git, SVN, Amazon EC2, Gradle, Linux/Unix, Windows OS.
+</p>
 
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
