--- a/index.html
+++ b/index.html
@@ -27,29 +27,65 @@
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Education</h3>
 
-<p>Masters of Science in Computer Science at Illinois Institute of Technology, Chicago, IL with GPA 3.66/4 graduating May,2018
-Bachelor of Technology in Computer Science at Kurukshetra University, India GPA:4/4(on conversion) graduated May 2012
+<p>
+<ul>
+<li>Masters of Science in Computer Science at Illinois Institute of Technology, Chicago, IL with GPA 3.66/4 graduating May,2018</li>
+<li>Bachelor of Technology in Computer Science at Kurukshetra University, India GPA:4/4(on conversion) graduated May 2012</li>
+</ul>
 </p>
 
 <h3>
 <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Technical Skills</h3>
 
-<p>• Programming Languages: Java, Python, C, JavaScript Shell Scripts, MPI, OpenMP, PThreads, HTML & CSS.
-• Technologies/Framework : Android, Spring MVC, Tomcat, Hadoop, Servlets, REST APIs, JSP, AJAX, JSON.
-• Databases (SQL/NoSQL): PostgreSQL, Oracle, Firebase, MongoDB, MySQL.
-• Tools and Libraries: Eclipse, Android Studio, Putty, WinSCP, Jupyter.
-• Version Control & Others: Git, SVN, Amazon EC2, Gradle, Linux/Unix, Windows OS.
+<p>
+<ul>
+<li><b>Programming Languages:</b> Java, Python, C, JavaScript Shell Scripts, MPI, OpenMP, PThreads, HTML & CSS.</li>
+<li><b>Technologies/Framework:</b> Android, Spring MVC, Tomcat, Hadoop, Servlets, REST APIs, JSP, AJAX, JSON.</li>
+<li><b>Databases (SQL/NoSQL):</b> PostgreSQL, Oracle, Firebase, MongoDB, MySQL.</li>
+<li><b>Tools and Libraries:</b> Eclipse, Android Studio, Putty, WinSCP, Jupyter.</li>
+<li><b>Version Control & Others:</b> Git, SVN, Amazon EC2, Gradle, Linux/Unix, Windows OS.</li>
+</ul>
 </p>
 
 <h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Professional Experience</h3>
 
-<p>You can @mention a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p>Software Engineer- Tata Consultancy Services (March 2013 - Aug 2015) 
+<ul>
+<li>Responsible for development and maintenance of a web based application utilizing Java, Enterprise Edition (JEE), JavaServer Pages (JSP) and Oracle PL/SQL.</li>
+<li>Developed SQL queries and procedures for various development related activities. </li>
+<li>Responsible for testing and deployment of the application in deadline-oriented environments.</li>
+<li>Used Eclipse IDE for development activity and worked on configuration tools- Putty, WinSCP.</li>
+<li>Managed and mentored newcomers about the technical and business aspects of the project.</li>
+</ul></p>
+
 
 <h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
+<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Academic Projects</h3>
+<h4>Smart Bar, an Android Application</h4>
+<p>The app was designed to be a companion app to a “Smartbar” which is a weightlifting bar that can record real time data about a weightlifters workout and overall progress. The app connects to the smartbar using wireless connectivity and keeps track of the users workouts. Used Firebase for storing the real time data.</p>
+<h4>Performance Evaluation Of Hadoop and Spark for Data Intensive Applications</h4>
+<p>The main objective of the project was to compare the performance of Hadoop and Spark for data intensive applications based on different parameters: running time, memory & CPU usage and fault tolerance capability.</p>
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<h3>
+<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Additional Projects</h3>
+<p>
+<ul>
+<li><b>Intel Edison Home Security System using touch sensors.</b> The idea was to keep the home owner updated about who is at the front door such that whenever the door is being touched, it sends the image of the person to the owner’s mobile device. Another Safety Application using Intel Edison that aims to alert people when there is a safety risk and to send notifications to related people on a custom android application developed.</li>
+<li><b>Food Menu</b>, an android application that showcases the list of food items and can be used to order food. Used Firebase for storing information. </li>
+<li><b>Parallel I/O benchmark using C, MPI I/O and OrangeFS</b> and setup virtual cluster of 8 nodes on Amazon EC2 and carried out Hadoop installation and ran several programs.</li>
+<li><b>New York Subway Route Finder</b>, designed to find out the shortest distance and the best available route between any two stations with in the New York subway based on algorithms design.</li>
+<li><b>Surf 4 U</b>, a cross platform web browser based on socket programming.</li>
+</p>
+
+<h3>
+<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Co-Curricular Activities/Achievements</h3>
+<p>
+<ul>
+<li><b>CapitalOne’s Best Hack, HackIllinois 2017</b>- Android app that boosts your travel experience by providing useful shopping tips.</li>
+<li>Participated and Demoed at various hackathons including Wildhacks Hackathon at Northwestern University and BoilerMake Hackathon at Purdue University.</li>
+</ul>
+</p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/sumedha22/myweb-page">Myweb-page</a> is maintained by <a href="https://github.com/sumedha22">sumedha22</a>.</span>
