--- a/index.html
+++ b/index.html
@@ -13,29 +13,29 @@
     <section class="page-header">
       <h1 class="project-name">Sumedha Gupta</h1>
       <h2 class="project-tagline">Computer Science Grad Student and Experienced Software Developer Seeking Full Time Oppurtunities</h2>
-      <a href="https://github.com/sumedhagupta/myweb-page" class="btn">View on GitHub</a>
-      <a href="https://github.com/sumedhagupta/myweb-page/zipball/master" class="btn">Download .zip</a>
-      <a href="https://github.com/sumedhagupta/myweb-page/tarball/master" class="btn">Download .tar.gz</a>-->
+      <a href="https://github.com/sumedhagupta/" class="btn">GitHub</a>
+      <a href="https://www.facebook.com/sam22y/" class="btn">Facebook</a>
+      <a href="https://www.linkedin.com/sumedha-gupta" class="btn">LinkedIn</a>
     </section>
 
     <section class="main-content">
       <h4>
-<a id="Bio" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Summary</h3>
+<a id="Bio" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Bio</h3>
 
 <p> Lover of music, colors 🌈 and nature, | lifelong hacker and technophile | studying CS @illinoistech | formerly @TCS</p>
 
 <h4>
-      <h3>
+      <!--<h3>
 <a id="Summary" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Summary</h3>
 
 <p>Computer Science Graduate student at Illinois Institute of Technology, Chicago with more than two years of professional experience in software development at Tata Consultancy Services through which I developed a deep passion for development and programming and constantly working for new and innovative ideas with good problem solving skills and a strong grasp on Object-Oriented Design Principles, data structures and algorithms.</p>
 
-<h3>
+<h3>-->
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Education</h3>
 
 <p>
 <ul>
-<li>Masters of Science in Computer Science at Illinois Institute of Technology, Chicago, IL with GPA 3.66/4 graduating May,2018</li>
+<li>Masters of Science in Computer Science at Illinois Institute of Technology, Chicago, IL with GPA 3.83/4 graduating May,2018</li>
 <li>Bachelor of Technology in Computer Science at Kurukshetra University, India GPA:4/4(on conversion) graduated May 2012</li>
 </ul>
 </p>
@@ -45,7 +45,7 @@
 
 <p>
 <ul>
-<li><b>Programming Languages:</b> Java, Python, C, JavaScript Shell Scripts, MPI, OpenMP, PThreads, HTML & CSS.</li>
+<li><b>Programming Languages:</b> Java, Python, C, JavaScript,Shell Scripts, MPI, OpenMP, PThreads, HTML & CSS.</li>
 <li><b>Technologies/Framework:</b> Android, Spring MVC, Tomcat, Hadoop, Servlets, REST APIs, JSP, AJAX, JSON.</li>
 <li><b>Databases (SQL/NoSQL):</b> PostgreSQL, Oracle, Firebase, MongoDB, MySQL.</li>
 <li><b>Tools and Libraries:</b> Eclipse, Android Studio, Putty, WinSCP, Jupyter.</li>
