--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <h2 class="project-tagline">Computer Science Grad Student and Experienced Software Developer Seeking Full Time Oppurtunities</h2>
       <a href="https://github.com/sumedhagupta/" class="btn">GitHub</a>
       <a href="https://www.facebook.com/sam22y/" class="btn">Facebook</a>
-      <a href="https://www.linkedin.com/sumedha-gupta" class="btn">LinkedIn</a>
+      <a href="https://www.linkedin.com/in/sumedha-gupta" class="btn">LinkedIn</a>
     </section>
 
     <section class="main-content">
